src/test/deca/context/invalid/redefinition-wrongType.context
redefinition-wrongType.deca:5:
